# FondosdePensiones

./: .gitignore  .gitignore.save  README.md  pyproject.toml  requirements.txt
codes/old/: Rentabilidad_FP.ipynb  carteras_fp.py  carteras_fp_por_afp.py  diversificacion_fp.py  prueba.py  run_diversificacion.py  run_fp.py  run_fp_afp.py
notebooks/: analisis_carteras_agregadas.ipynb
scripts/: auditoria_datos.py  build_long_panel.py  files_names.py  run_descargas.py
src/fondosdepensiones/: balance_d1.py  carteras_inversion.py  carteras_inversion_agregadas.py  cli.py  config.py  cuadros_utils.py  eeff.py  fecu.py  html_utils.py  io_utils.py  logger.py  long.py  precios_if.py  session.py  utils_periodos.py  valores_cuota.py
src/fondosdepensiones.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
