[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fondosdepensiones"
version = "0.1.0"
description = "Descarga y procesamiento de datos de fondos de pensiones (SPensiones)"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "lxml"
]

[project.scripts]
fondosdescargas = "fondosdepensiones.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
